test/functions/fcf/UnannotatedFormalInProcType.good
UnannotatedFormalInProcType.chpl:4: In function 'test':
UnannotatedFormalInProcType.chpl:5: error: unannotated formal is ambiguous in this context
UnannotatedFormalInProcType.chpl:5: error: unannotated formal is ambiguous in this context
