test/functions/fcf/UnannotatedFormalInProcType.chpl
proc test() {
  type T = proc(int, int): int;
  writeln(T);
}
test();
